[package]
name = "checkline"
edition = "2021"
version = "1.1.2"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "checkline: checkbox line picker for stdin line input"
readme = "README.md"
repository = "https://github.com/sixarm/checkline/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["check", "checkbox", "stdin", "pick", "choose"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
cursive = { version = "0.20.0" } # features = ["termion-backend", "crossterm-backend"]
clap = { version = "4.5.4", features = ["deprecated", "derive", "cargo", "env", "unicode", "wrap_help", "string"] }
env_logger = "0.10.2"
log = "0.4.21"
